Change sites path to don't use a fixed domain

--- a/build
+++ b/build
@@ -5,8 +5,9 @@ DRUPALPATH='drupal'
 TRANSLATIONS='pt-br'
 
 LOCALSITESPATH='site'
-LOCALSITESDOMAIN='d7.danillonunes.net'
+PUBLICSITESPATH='default'
 
 rm -rf $DRUPALPATH
 drush make --translations=$TRANSLATIONS $MAKEFILE $DRUPALPATH
-ln -s $LOCALSITESPATH $DRUPALPATH/sites/$LOCALSITESDOMAIN
+rm -rf $DRUPALPATH/sites/$PUBLICSITESPATH
+ln -s $LOCALSITESPATH $DRUPALPATH/sites/$PUBLICSITESPATH
