--- a/build
+++ b/build
@@ -1,5 +1,7 @@
 #!/bin/sh
 
+CWD=`pwd`
+
 MAKEFILE='danillonunes.make'
 DRUPALPATH='drupal'
 TRANSLATIONS='pt-br'
@@ -7,7 +9,7 @@ TRANSLATIONS='pt-br'
 LOCALSITESPATH='site'
 PUBLICSITESPATH='default'
 
-rm -rf $DRUPALPATH
-drush make --translations=$TRANSLATIONS $MAKEFILE $DRUPALPATH
-rm -rf $DRUPALPATH/sites/$PUBLICSITESPATH
-ln -s $LOCALSITESPATH $DRUPALPATH/sites/$PUBLICSITESPATH
+rm -rf $CWD/$DRUPALPATH
+drush make --translations=$TRANSLATIONS $CWD/$MAKEFILE $CWD/$DRUPALPATH
+rm -rf $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
+ln -s $CWD/$LOCALSITESPATH $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
