Build to a temporary directory to decrease offline time

--- a/build
+++ b/build
@@ -9,7 +9,9 @@ TRANSLATIONS='pt-br'
 LOCALSITESPATH='site'
 PUBLICSITESPATH='default'
 
+rm -rf $CWD/$DRUPALPATH-temp
+drush make --translations=$TRANSLATIONS $CWD/$MAKEFILE $CWD/$DRUPALPATH-temp
 rm -rf $CWD/$DRUPALPATH
-drush make --translations=$TRANSLATIONS $CWD/$MAKEFILE $CWD/$DRUPALPATH
+mv $CWD/$DRUPALPATH-temp $CWD/$DRUPALPATH
 rm -rf $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
 ln -s $CWD/$LOCALSITESPATH $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
