Improve directory replacement in build script

--- a/build
+++ b/build
@@ -10,8 +10,10 @@ LOCALSITESPATH='site'
 PUBLICSITESPATH='default'
 
 rm -rf $CWD/$DRUPALPATH-temp
+rm -rf $CWD/$DRUPALPATH-old
 drush make --translations=$TRANSLATIONS $CWD/$MAKEFILE $CWD/$DRUPALPATH-temp
-rm -rf $CWD/$DRUPALPATH
+mv $CWD/$DRUPALPATH $CWD/$DRUPALPATH-old
 mv $CWD/$DRUPALPATH-temp $CWD/$DRUPALPATH
 rm -rf $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
 ln -s $CWD/$LOCALSITESPATH $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
+rm -rf $CWD/$DRUPALPATH-old
