Improve build script to link new files directory

--- a/build
+++ b/build
@@ -7,7 +7,10 @@ DRUPALPATH='drupal'
 TRANSLATIONS='pt-br'
 
 LOCALSITESPATH='site'
-PUBLICSITESPATH='default'
+LOCALFILESPATH='site/files'
+
+PUBLICSITESPATH='sites/default'
+PUBLICFILESPATH='files'
 
 rm -rf $CWD/$DRUPALPATH-temp
 rm -rf $CWD/$DRUPALPATH-old
@@ -15,5 +18,6 @@ drush make --translations=$TRANSLATIONS $CWD/$MAKEFILE $CWD/$DRUPALPATH-temp
 mv $CWD/$DRUPALPATH $CWD/$DRUPALPATH-old
 mv $CWD/$DRUPALPATH-temp $CWD/$DRUPALPATH
 rm -rf $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
-ln -s $CWD/$LOCALSITESPATH $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
+ln -s $CWD/$LOCALSITESPATH $CWD/$DRUPALPATH/$PUBLICSITESPATH
+ln -s $CWD/$LOCALFILESPATH $CWD/$DRUPALPATH/$PUBLICFILESPATH
 rm -rf $CWD/$DRUPALPATH-old
