--- a/build
+++ b/build
@@ -15,9 +15,12 @@ PUBLICFILESPATH='files'
 rm -rf $CWD/$DRUPALPATH-temp
 rm -rf $CWD/$DRUPALPATH-old
 drush make --translations=$TRANSLATIONS $CWD/$MAKEFILE $CWD/$DRUPALPATH-temp
-mv $CWD/$DRUPALPATH $CWD/$DRUPALPATH-old
-mv $CWD/$DRUPALPATH-temp $CWD/$DRUPALPATH
-rm -rf $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
-ln -s $CWD/$LOCALSITESPATH $CWD/$DRUPALPATH/$PUBLICSITESPATH
-ln -s $CWD/$LOCALFILESPATH $CWD/$DRUPALPATH/$PUBLICFILESPATH
-rm -rf $CWD/$DRUPALPATH-old
+if [test -d $CWD/$DRUPALPATH-temp]
+  then
+    mv $CWD/$DRUPALPATH $CWD/$DRUPALPATH-old
+    mv $CWD/$DRUPALPATH-temp $CWD/$DRUPALPATH
+    rm -rf $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
+    ln -s $CWD/$LOCALSITESPATH $CWD/$DRUPALPATH/$PUBLICSITESPATH
+    ln -s $CWD/$LOCALFILESPATH $CWD/$DRUPALPATH/$PUBLICFILESPATH
+    rm -rf $CWD/$DRUPALPATH-old
+fi
