--- a/build
+++ b/build
@@ -15,7 +15,7 @@ PUBLICFILESPATH='files'
 rm -rf $CWD/$DRUPALPATH-temp
 rm -rf $CWD/$DRUPALPATH-old
 drush make --translations=$TRANSLATIONS $CWD/$MAKEFILE $CWD/$DRUPALPATH-temp
-if [test -d $CWD/$DRUPALPATH-temp]
+if [ "test -d $CWD/$DRUPALPATH-temp" ]
   then
     mv $CWD/$DRUPALPATH $CWD/$DRUPALPATH-old
     mv $CWD/$DRUPALPATH-temp $CWD/$DRUPALPATH
