Change temporary directory name

--- a/build
+++ b/build
@@ -12,13 +12,13 @@ LOCALFILESPATH='site/files'
 PUBLICSITESPATH='sites/default'
 PUBLICFILESPATH='files'
 
-rm -rf $CWD/$DRUPALPATH-temp
+rm -rf $CWD/$DRUPALPATH-tmp
 rm -rf $CWD/$DRUPALPATH-old
-drush make --translations=$TRANSLATIONS $CWD/$MAKEFILE $CWD/$DRUPALPATH-temp
-if [ "test -d $CWD/$DRUPALPATH-temp" ]
+drush make --translations=$TRANSLATIONS $CWD/$MAKEFILE $CWD/$DRUPALPATH-tmp
+if [ "test -d $CWD/$DRUPALPATH-tmp" ]
   then
     mv $CWD/$DRUPALPATH $CWD/$DRUPALPATH-old
-    mv $CWD/$DRUPALPATH-temp $CWD/$DRUPALPATH
+    mv $CWD/$DRUPALPATH-tmp $CWD/$DRUPALPATH
     rm -rf $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
     ln -s $CWD/$LOCALSITESPATH $CWD/$DRUPALPATH/$PUBLICSITESPATH
     ln -s $CWD/$LOCALFILESPATH $CWD/$DRUPALPATH/$PUBLICFILESPATH
