Fix bug in build script which doesn't remove the Drupal site folder

--- a/build
+++ b/build
@@ -18,7 +18,7 @@ if [ "test -d $CWD/$DRUPALPATH-tmp" ]
   then
     mv $CWD/$DRUPALPATH $CWD/$DRUPALPATH-old
     mv $CWD/$DRUPALPATH-tmp $CWD/$DRUPALPATH
-    rm -rf $CWD/$DRUPALPATH/sites/$PUBLICSITESPATH
+    rm -rf $CWD/$DRUPALPATH/$PUBLICSITESPATH
     ln -s $CWD/$LOCALSITESPATH $CWD/$DRUPALPATH/$PUBLICSITESPATH
     ln -s $CWD/$LOCALFILESPATH $CWD/$DRUPALPATH/$PUBLICFILESPATH
     rm -rf $CWD/$DRUPALPATH-old
