--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "site/themes/jdi5/css/property"]
 	path = site/themes/jdi5/css/property
-	url = git@github.com:danillonunes/property.git
+	url = https://github.com/danillonunes/property.git
