--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ php:
 before_script:
  - pyrus channel-discover pear.drush.org
  - pyrus install drush/drush
+ - git clone http://git.drupal.org/sandbox/danillonunes/1919260.git ~/.drush/commands/build
  - phpenv rehash
+ - drush cache-clear drush
 
 script: make
