--- a/docker/nginx/danillonunes.conf
+++ b/docker/nginx/danillonunes.conf
@@ -29,7 +29,7 @@ server {
     }
 
     ## Filesystem root of the site and index.
-    root /danilllonunes;
+    root /danilllonunes/http;
     index index.php;
 
     ## If you're using a Nginx version greater or equal to 1.1.4 then
