Add support to upstream php cgi replacement at runtime

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx
 MAINTAINER Danillo Nunes <marcus@danillo.net>
 
 ADD ["https://github.com/perusio/drupal-with-nginx/archive/D7.tar.gz", "/"]
-COPY ["danillonunes.conf", "/"]
+COPY ["danillonunes.conf", "entrypoint.sh", "/"]
 
 RUN mkdir -p /danillonunes && \
 
@@ -24,5 +24,7 @@ RUN mkdir -p /danillonunes && \
 
     ln -sf /dev/stdout /var/log/nginx/access.log && \
     ln -sf /dev/stderr /var/log/nginx/error.log
+
+ENTRYPOINT ["./entrypoint.sh"]
 
 CMD ["nginx", "-g", "daemon off;"]
