Install pdo and pdo_mysql on php image

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:fpm
 MAINTAINER Danillo Nunes <marcus@danillo.net>
 
-RUN docker-php-ext-install pdo-mysql
+RUN docker-php-ext-install pdo pdo_mysql
 
 CMD ["php-fpm"]
