--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,6 +1,12 @@
 FROM php:5-fpm
 MAINTAINER Danillo Nunes <marcus@danillo.net>
 
-RUN docker-php-ext-install gd pdo pdo_mysql
+RUN apt-get update && apt-get install -y \
+        libfreetype6-dev \
+        libjpeg62-turbo-dev \
+        libpng12-dev \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install gd pdo pdo_mysql \
+    && rm -rf /var/cache/apk/*
 
 CMD ["php-fpm"]
