Add nginx redirect directives

--- a/docker/nginx/danillonunes.conf
+++ b/docker/nginx/danillonunes.conf
@@ -42,3 +42,49 @@ server {
     include apps/drupal/drupal.conf;
 
 } # HTTP server
+
+## REDIRECT server.
+# If your setup has an https reverse proxy in front of the standard http server
+# this setting will fall into a redirect loop.
+#
+# Otherwise, uncomment this to redirect http to https in the standard domain.
+# server {
+#     listen 80;
+#     server_name danillonunes.com;
+#     return 301 https://danillonunes.com$request_uri;
+# }
+
+## REDIRECT server.
+server {
+    listen 80;
+    server_name www.danillonunes.com;
+    return 301 https://danillonunes.com$request_uri;
+}
+
+## REDIRECT server.
+server {
+    listen 80;
+    server_name danillonunes.net;
+    return 301 https://danillonunes.com$request_uri;
+}
+
+## REDIRECT server.
+server {
+    listen 80;
+    server_name www.danillonunes.net;
+    return 301 https://danillonunes.com$request_uri;
+}
+
+## REDIRECT server.
+server {
+    listen 80;
+    server_name danillo.net;
+    return 301 https://danillonunes.com$request_uri;
+}
+
+## REDIRECT server.
+server {
+    listen 80;
+    server_name www.danillo.net;
+    return 301 https://danillonunes.com$request_uri;
+}
