Add redirect rules for alternative domain danillonunes.com.br

--- a/docker/nginx/danillonunes.conf
+++ b/docker/nginx/danillonunes.conf
@@ -64,6 +64,20 @@ server {
 ## REDIRECT server.
 server {
     listen 80;
+    server_name danillonunes.com.br;
+    return 301 https://danillonunes.com$request_uri;
+}
+
+## REDIRECT server.
+server {
+    listen 80;
+    server_name www.danillonunes.com.br;
+    return 301 https://danillonunes.com$request_uri;
+}
+
+## REDIRECT server.
+server {
+    listen 80;
     server_name danillonunes.net;
     return 301 https://danillonunes.com$request_uri;
 }
