--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 env:
-  DOCKER_COMPOSE_VERSION: 1.4.1
+  DOCKER_COMPOSE_VERSION: 1.5.2
 
 before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
@@ -13,5 +13,5 @@ before_install:
 
 script:
   - docker-compose build
-  - docker-compose up
+  - docker-compose up -d
   - docker ps -a
