Improve nginx server rules

--- a/docker/nginx/danillonunes.conf
+++ b/docker/nginx/danillonunes.conf
@@ -56,49 +56,28 @@ server {
 
 ## REDIRECT server.
 server {
-    listen 80;
-    server_name www.danillonunes.com;
+    listen 80 default_server;
+    server_name www.danillonunes.com *.danillonunes.com;
     return 301 https://danillonunes.com$request_uri;
 }
 
 ## REDIRECT server.
 server {
     listen 80;
-    server_name danillonunes.com.br;
+    server_name danillonunes.com.br *.danillonunes.com.br;
     return 301 https://danillonunes.com$request_uri;
 }
 
 ## REDIRECT server.
 server {
     listen 80;
-    server_name www.danillonunes.com.br;
+    server_name danillonunes.net *.danillonunes.net;
     return 301 https://danillonunes.com$request_uri;
 }
 
 ## REDIRECT server.
 server {
     listen 80;
-    server_name danillonunes.net;
-    return 301 https://danillonunes.com$request_uri;
-}
-
-## REDIRECT server.
-server {
-    listen 80;
-    server_name www.danillonunes.net;
-    return 301 https://danillonunes.com$request_uri;
-}
-
-## REDIRECT server.
-server {
-    listen 80;
-    server_name danillo.net;
-    return 301 https://danillonunes.com$request_uri;
-}
-
-## REDIRECT server.
-server {
-    listen 80;
-    server_name www.danillo.net;
+    server_name danillo.net *.danillo.net;
     return 301 https://danillonunes.com$request_uri;
 }
