Fix default server directive location

--- a/docker/nginx/danillonunes.conf
+++ b/docker/nginx/danillonunes.conf
@@ -3,7 +3,7 @@
 
 ## HTTP server.
 server {
-    listen 80; # IPv4
+    listen 80 default_server; # IPv4
 
     limit_conn arbeit 32;
 
@@ -56,7 +56,7 @@ server {
 
 ## REDIRECT server.
 server {
-    listen 80 default_server;
+    listen 80;
     server_name www.danillonunes.com *.danillonunes.com;
     return 301 https://danillonunes.com$request_uri;
 }
