Remove wildcard domains from redirect directives

--- a/docker/nginx/danillonunes.conf
+++ b/docker/nginx/danillonunes.conf
@@ -57,27 +57,27 @@ server {
 ## REDIRECT server.
 server {
     listen 80;
-    server_name www.danillonunes.com *.danillonunes.com;
+    server_name www.danillonunes.com;
     return 301 https://danillonunes.com$request_uri;
 }
 
 ## REDIRECT server.
 server {
     listen 80;
-    server_name danillonunes.com.br *.danillonunes.com.br;
+    server_name danillonunes.com.br www.danillonunes.com.br;
     return 301 https://danillonunes.com$request_uri;
 }
 
 ## REDIRECT server.
 server {
     listen 80;
-    server_name danillonunes.net *.danillonunes.net;
+    server_name danillonunes.net www.danillonunes.net;
     return 301 https://danillonunes.com$request_uri;
 }
 
 ## REDIRECT server.
 server {
     listen 80;
-    server_name danillo.net *.danillo.net;
+    server_name danillo.net www.danillo.net;
     return 301 https://danillonunes.com$request_uri;
 }
